<resources>
    <string name="app_name">Bucks Hunter</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="logs">Logs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="pref_scan_enabled">scan_enabled</string>
    <string name="pref_max_distance">max_distance</string>
    <string name="pref_period_min">period_min</string>
    <string name="pref_currency">currency</string>
    <string name="pref_bottom_left_lat">bottom_left_lat</string>
    <string name="pref_bottom_left_lng">bottom_left_lng</string>
    <string name="pref_top_right_lat">top_right_lat</string>
    <string name="pref_top_right_lng">top_right_lng</string>
    <string name="pref_min_amount">min_amount</string>
    <string name="zero_km">0 km</string>
    <string name="n_a">N/A</string>
    <string name="new_closest_atm">New Closest ATM:</string>
    <string name="last_sync">Last sync:</string>
    <string name="lat">LAT:</string>
    <string name="lon">LON:</string>
    <string name="closest_atm">Closest ATM:</string>
</resources>